--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "Physics2019"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: ""
 delete_merged_file: true
 output_dir: "docs"
